<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bmd.tsg_mbour.MainActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="368dp"
        android:layout_height="144dp"
        android:orientation="vertical"
        tools:ignore="InvalidId,MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tsg2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="374dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll1"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btn_acceuil"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_acceuil"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="30dp" />

        <Button
            android:id="@+id/btn_bureau"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_bureau"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="94dp" />


        <Button
            android:id="@+id/btn_butmvt"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_butmvt"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="421dp" />

        <Button
            android:id="@+id/btn_sport"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sport"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="161dp" />

        <Button
            android:id="@+id/btn_education"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_education"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="223dp" />

        <Button
            android:id="@+id/btn_communication"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_communication"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="290dp" />


        <Button
            android:id="@+id/btn_inscription"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_inscription"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="356dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
